Project

General

Profile

Actions

Bug #15494

closed

Fix Random.urandom in a chroot on OpenBSD

Bug #15494: Fix Random.urandom in a chroot on OpenBSD

Added by jeremyevans0 (Jeremy Evans) over 7 years ago. Updated about 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0p0 (2018-12-25 revision 66547) [x86_64-openbsd]
[ruby-core:<unknown>]

Description

r64625 broke Random.urandom because it uses OpenBSD as a macro when it is not defined. You must include the sys/param.h header to define the macro. I've tested the attached patch and it fixes Random.urandom usage inside a chroot on OpenBSD.

This will need to be backported to 2.6.


Files

patch-random_c (355 Bytes) patch-random_c jeremyevans0 (Jeremy Evans), 01/02/2019 04:18 AM

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r66699.


Fix Random.urandom in a chroot on OpenBSD

[ruby-core:90850] [Bug #15494]

From: jeremyevans0 (Jeremy Evans)

Updated by naruse (Yui NARUSE) about 7 years ago Actions #2 [ruby-core:90906]

  • Backport changed from 2.4: DONTNEED, 2.5: DONTNEED, 2.6: REQUIRED to 2.4: DONTNEED, 2.5: DONTNEED, 2.6: DONE

ruby_2_6 r66729 merged revision(s) 66699.

Actions

Also available in: PDF Atom